Fixes the DB with postgres instead of mysql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: codepush-mysql
+  postgres:
+    image: postgres:14-alpine
+    container_name: codepush-postgres
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: codepush
-      MYSQL_USER: codepush
-      MYSQL_PASSWORD: 123456
+      POSTGRES_ROOT_PASSWORD: postgres
+      POSTGRES_DATABASE: codepush
+      POSTGRES_PASSWORD: postgres
     volumes:
-      - mysql-data:/var/lib/mysql
-      - ./sql/codepush-all-docker.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres-data:/var/lib/postgresql/data
+      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - "3306:3306"
+      - "5432:5432"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -30,8 +29,8 @@ services:
       - "9000:9000"  # API port
       - "9001:9001"  # Console port
     volumes:
-      - minio-data:/data
+      - ./minio-data:/data
 
 volumes:
-  mysql-data:
+  postgres-data:
   minio-data:
